// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItem "open" command renders as link 1`] = `
<a
  className="action-item"
  href="https://example.com/bar"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
   
  
  t
   
</a>
`;

exports[`ActionItem "open" command renders as link that opens in a new tab, but without icon for a different origin as the alt action and a primary action defined 1`] = `
<a
  className="action-item"
  href="https://other.com/foo"
  onClick={[Function]}
  onKeyPress={[Function]}
  rel="noopener noreferrer"
  tabIndex={0}
  target="_blank"
>
   
  
  primary
   
</a>
`;

exports[`ActionItem "open" command renders as link with icon and opens a new tab for a different origin 1`] = `
<a
  className="action-item"
  href="https://other.com/foo"
  onClick={[Function]}
  onKeyPress={[Function]}
  rel="noopener noreferrer"
  tabIndex={0}
  target="_blank"
>
   
  
  t
   
  <OpenInNewIcon />
</a>
`;

exports[`ActionItem actionItem variant 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem non-actionItem variant 1`] = `
<a
  aria-label="d"
  className="action-item"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem non-pressed actionItem 1`] = `
<a
  aria-pressed={false}
  className="action-item action-item--variant-action-item"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
   
  b
   
</a>
`;

exports[`ActionItem noop command 1`] = `
<span
  className="action-item  "
  data-tooltip="d"
>
  <img
    src="u"
  />
   
  g: 
  t
</span>
`;

exports[`ActionItem pressed toggle actionItem 1`] = `
<a
  aria-pressed={true}
  className="action-item action-item--variant-action-item action-item--pressed"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
   
  b
   
</a>
`;

exports[`ActionItem run command 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item disabled"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command 2`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command with error 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command with error with showInlineError 1`] = `
<a
  aria-label="Error: x"
  className="action-item action-item--variant-action-item"
  data-tooltip="Error: x"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 1`] = `
<a
  aria-label="d"
  className="action-item action-item--loading action-item--variant-action-item disabled"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
  <div
    className="action-item__loader"
  >
    <div
      className="loading-spinner "
    />
  </div>
</a>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 2`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    src="u"
  />
   
  g: 
  t
   
</a>
`;

exports[`ActionItem title element 1`] = `
<a
  aria-label="d"
  className="action-item action-item--variant-action-item"
  data-tooltip="d"
  href=""
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <span>
    t2
  </span>
   
</a>
`;
